# termora

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_pipeline.py
termora/: __main__.py
termora/cli/: __init__.py  main.py  quick_termora.py
termora/core/: agent.py  context.py  executor.py  history.py  pipeline.py  rollback.py
termora/tests/: __init__.py  test_agent.py  test_executor.py  test_helpers.py  test_rollback.py
termora/utils/: helpers.py  path_resolver.py
